[fix][dingo-executor] Fix load file and gc safe point update issues